signup page added

--- a/views/partials/user/footer.ejs
+++ b/views/partials/user/footer.ejs
@@ -11,8 +11,8 @@
         <div class="col-md-3 mb-4 mb-md-0">
           <h5>Useful Links</h5>
           <ul class="list-unstyled">
-            <li><a href="#" class="text-white">Home</a></li>
-            <li><a href="#" class="text-white">Shop</a></li>
+            <li><a href="/" class="text-white">Home</a></li>
+            <li><a href="/products" class="text-white">Shop</a></li>
             <li><a href="#" class="text-white">About Us</a></li>
             <li><a href="#" class="text-white">Contact</a></li>
           </ul>
