--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -45,7 +45,7 @@
           <li class="nav-item"><a class="nav-link" href="#">Accessories</a></li>
           <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Login</a></li>
+          <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
         </ul>
         <ul class="navbar-nav ms-auto"> <!-- Ensures the cart is aligned to the right -->
           <li class="nav-item">
@@ -65,18 +65,30 @@
     <div class="color-overlay"></div>
 
     <!-- Login Form -->
-    <div class="login-form">
-      <h2>Log In to Your Account</h2>
+    <div class="signup-form">
+      <h2>Sign Up</h2>
       <form>
-        <div class="login container">
-          <div class="input-group">
-            <label for="email">Email</label>
-            <input type="email" id="email" value="johnsamuel@hotmail.com">
-          </div>
-          <div class="input-group">
-            <label for="password">Password</label>
-            <input type="password" id="password" value="****************">
-          </div>
+        <div class="signup container">
+            <div class="input-group">
+                <label for="email">First Name</label>
+                <input type="text" id="firstName" value="Enter your First Name">
+            </div>
+            <div class="input-group">
+                <label for="email">Last Name</label>
+                <input type="text" id="lastName" value="Enter your Last Name">
+            </div>
+            <div class="input-group">
+                <label for="email">Email</label>
+                <input type="email" id="email" value="Enter your Email">
+            </div>
+            <div class="input-group">
+                <label for="Mobile Number">Email</label>
+                <input type="tel" id="mobileNumber" value="Enter your Mobile Number">
+            </div>
+            <div class="input-group">
+                <label for="password">Password</label>
+                <input type="password" id="password" value="Enter a password">
+            </div>
           <button class="button">CONTINUE</button>
         </div>
 
