--- a/public/styles.css
+++ b/public/styles.css
@@ -513,14 +513,14 @@ html, body {
 
 .login-form {
   background-color: white;
-  border-radius: 8px;
-  padding: 30px;
+  border-radius: 0px 8px 0 0;
+  padding: 21px;
   width: 400px;
   max-width: 90%; /* For responsiveness */
   position: absolute;
-  top: 50%;
-  left: 70%;
-  transform: translate(50%, -50%);
+  top: 20%;
+  left: 50%;
+  z-index: 10;
 }
 
 .login-form h2 {
@@ -528,14 +528,82 @@ html, body {
   margin-bottom: 20px;
 }
 
-.login-form .form-label {
-  font-weight: bold;
+/***** Section *****/
+
+.login {
+  background-color: #fff;
+  padding: 30px 10px;
+  width: 90%;
+}
+.input-group {
+  margin-bottom: 25px;
+  position: relative;
+}
+.input-group label {
+  position: absolute;
+  top: -10px;
+  left: 15px;
+  background-color: #fff;
+  padding: 0 5px;
+  font-size: 12px;
+  color: #333;
+}
+.input-group input {
+  width: 100%;
+  padding: 15px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+  transition: border-color 0.3s;
+  border-radius: 5px;
+}
+.input-group input:focus {
+  border-color: #000;
+  outline: none;
+}
+.input-group input[type="password"] {
+  font-family: 'Courier New', Courier, monospace;
+}
+.options {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 25px;
+}
+.options label {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  color: #333;
+}
+.options input[type="checkbox"] {
+  margin-right: 5px;
+}
+.options a {
+  font-size: 14px;
+  color: #333;
+  text-decoration: none;
+  transition: color 0.3s;
+}
+.options a:hover {
+  color: #000;
+}
+.button {
+  width: 100%;
+  padding: 15px;
+  background-color: #000;
+  color: #fff;
+  border: none;
+  border-radius: 10px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+.button:hover {
+  background-color: #333;
 }
 
-.login-form .btn-danger {
-  background-color: #d9534f;
-  border-color: #d9534f;
-}
+  /***** End Section *****/
+
 
 .login-form .separator {
   display: flex;
@@ -557,7 +625,6 @@ html, body {
   width: 10px;
   height: 10px;
   background-color: #ccc;
-  border-radius: 50%;
   position: absolute;
   top: -4px;
 }
@@ -586,15 +653,198 @@ html, body {
   color: #d9534f;
 }
 
+@media (max-width: 768px) {
+  .login-form {
+
+    align-items: center;  
+    left: auto;
+  }
+
+  .login-form h2 {
+    text-align: center;
+    margin-bottom: 20px;
+
+  }
+}
+
+
+
+
+/**  Signup page  **/
+/* Login form styles */
+
+.signup-form {
+  background-color: white;
+  border-radius: 0px 8px 0 0;
+  padding: 21px;
+  width: 400px;
+  max-width: 90%; /* For responsiveness */
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  z-index: 10;
+}
+
+.signup-form h2 {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+/***** Section *****/
+
+.signup {
+  background-color: #fff;
+  padding: 30px 10px;
+  width: 90%;
+}
+.signup .input-group {
+  margin-bottom: 25px;
+  position: relative;
+}
+.input-group label {
+  position: absolute;
+  top: -10px;
+  left: 15px;
+  background-color: #fff;
+  padding: 0 5px;
+  font-size: 12px;
+  color: #333;
+}
+.input-group input {
+  width: 100%;
+  padding: 15px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+  transition: border-color 0.3s;
+  border-radius: 5px;
+}
+.input-group input:focus {
+  border-color: #000;
+  outline: none;
+}
+.input-group input[type="password"] {
+  font-family: 'Courier New', Courier, monospace;
+}
+.options {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 25px;
+}
+.options label {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  color: #333;
+}
+.options input[type="checkbox"] {
+  margin-right: 5px;
+}
+.options a {
+  font-size: 14px;
+  color: #333;
+  text-decoration: none;
+  transition: color 0.3s;
+}
+.options a:hover {
+  color: #000;
+}
+.button {
+  width: 100%;
+  padding: 15px;
+  background-color: #000;
+  color: #fff;
+  border: none;
+  border-radius: 10px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+.button:hover {
+  background-color: #333;
+}
+
+  /***** End Section *****/
+
+
+.signup-form .separator {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  margin-top: 30px;
+}
+
+.signup-form .separator span {
+  flex-grow: 1;
+  border-bottom: 1px solid #ccc;
+  line-height: 1px;
+  position: relative;
+}
+
+.signup-form .separator span:before,
+.signup-form .separator span:after {
+  content: '';
+  width: 10px;
+  height: 10px;
+  background-color: #ccc;
+  position: absolute;
+  top: -4px;
+}
+
+.signup-form .separator span:before {
+  left: -15px;
+}
+
+.signup-form .separator span:after {
+  right: -15px;
+}
+
+.signup-form .btn-outline-dark {
+  border-color: #333;
+  color: #333;
+}
+
+.signup-form .btn-outline-dark:hover {
+  background-color: #333;
+  color: white;
+}
+
+/* ... Add styles for Facebook and Apple buttons */
+
+.signup-form .forgot-password {
+  color: #d9534f;
+}
+
+@media (max-width: 768px) {
+  .signup-form {
+
+    align-items: center;  
+    left: auto;
+  }
+
+  .signup-form h2 {
+    text-align: center;
+    margin-bottom: 20px;
+
+  }
+}
+
+
+/** End of sign up page **/
+
 /***** Page not found *****/ 
 
 /* General Reset */
 
 
 .not-found-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   max-width: 600px;
   margin: 0 auto;
+  height: 100vh; /* Full height of the viewport */
 }
 
 .not-found-title {
