--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -31,7 +31,7 @@
   <!-- Navbar (transparent and positioned over the image) -->
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="/">
         <img src="pedalist-logo.png" alt="Logo" width="60" height="50">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -40,12 +40,12 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mx-auto"> <!-- Centered items -->
-          <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Bicycles</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Accessories</a></li>
           <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Login</a></li>
+          <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
         </ul>
         <ul class="navbar-nav ms-auto"> <!-- Ensures the cart is aligned to the right -->
           <li class="nav-item">
