update css and ejs files

--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -106,7 +106,7 @@
         </div>
 
         <!-- Sign up -->
-        <p class="text-center mt-3">New user? <strong><a href="/signup">Sign up here</a></strong></p>
+        <p class="text-center mt-3">Existing user? <strong><a href="/login">Log In here</a></strong></p>
       </form>
     </div>
   </div>
