--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -71,23 +71,23 @@
         <div class="signup container">
             <div class="input-group">
                 <label for="email">First Name</label>
-                <input type="text" id="firstName" value="Enter your First Name">
+                <input type="text" id="firstName" placeholder="Enter your First Name">
             </div>
             <div class="input-group">
                 <label for="email">Last Name</label>
-                <input type="text" id="lastName" value="Enter your Last Name">
+                <input type="text" id="lastName" placeholder="Enter your Last Name">
             </div>
             <div class="input-group">
                 <label for="email">Email</label>
-                <input type="email" id="email" value="Enter your Email">
+                <input type="email" id="email" placeholder="Enter your Email">
             </div>
             <div class="input-group">
                 <label for="Mobile Number">Email</label>
-                <input type="tel" id="mobileNumber" value="Enter your Mobile Number">
+                <input type="tel" id="mobileNumber" placeholder="Enter your Mobile Number">
             </div>
             <div class="input-group">
                 <label for="password">Password</label>
-                <input type="password" id="password" value="Enter a password">
+                <input type="password" id="password" placeholder="Enter a password">
             </div>
           <button class="button">CONTINUE</button>
         </div>
