--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -71,11 +71,11 @@
         <div class="login container">
           <div class="input-group">
             <label for="email">Email</label>
-            <input type="email" id="email" value="johnsamuel@hotmail.com">
+            <input type="email" id="email" placeholder="johnsamuel@hotmail.com">
           </div>
           <div class="input-group">
             <label for="password">Password</label>
-            <input type="password" id="password" value="****************">
+            <input type="password" id="password" placeholder="****************">
           </div>
           <button class="button">CONTINUE</button>
         </div>
