--- a/views/user/otp.ejs
+++ b/views/user/otp.ejs
@@ -65,7 +65,8 @@
         <div class="color-overlay"></div>
 
         <!-- Login Form -->
-        <div class="otp">
+        <div class="otp -login-form">
+
             <img alt="Illustration of a hand holding a phone with a checkmark on the screen" height="150"
                 src="https://storage.googleapis.com/a1aa/image/ACGPuh2hPXp8IxHvSRhtBbEUlCjRvgBs1hIAWShnKNqdjB5E.jpg"
                 width="150" />
