--- a/public/styles.css
+++ b/public/styles.css
@@ -828,12 +828,19 @@ html, body {
 /***** OTP PAGE *****/ 
 
 .otp {
-  width: 50vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50vw;
   background-color: #ffffff;
   padding: 40px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  z-index: 11;
+  z-index: 10;
+  margin-top: 20vh;
+  margin-left: 25vw;
+  position : absolute;
+
 }
 .otp img {
   width: 150px;
@@ -881,6 +888,15 @@ html, body {
   border-radius: 8px;
   font-size: 16px;
   cursor: pointer;
+}
+
+@media (max-width: 768px) {
+
+  .otp{
+    margin-inline: auto;
+    width: 100vw;
+  }
+  
 }
 
 /***** End OTP PAGE *****/
