--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -45,7 +45,23 @@
           <li class="nav-item"><a class="nav-link" href="#">Accessories</a></li>
           <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-          <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
+          <li class="nav-item">
+      
+            <% if(locals.user){ %>
+              <div class="dropdown">
+                <a href="#" class="nav-link">
+                  <%= locals.user.firstName %>
+                </a>
+                <div class="dropdown-content">
+                  <a href="/userProfile">Profile</a>
+                  <a href="/logout">Logout</a>
+                </div>
+              </div>
+              <% } else { %>
+                <a class="nav-link" href="/login">Login</a>
+                <% } %>
+                
+          </li>
         </ul>
         <ul class="navbar-nav ms-auto"> <!-- Ensures the cart is aligned to the right -->
           <li class="nav-item">
@@ -350,3 +366,5 @@
   </section>
 
   <%- include('../partials/user/footer.ejs') %>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
