--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -67,16 +67,22 @@
     <!-- Login Form -->
     <div class="login-form">
       <h2>Log In to Your Account</h2>
-      <form>
+      <form method="post" action="/login">
         <div class="login container">
           <div class="input-group">
             <label for="email">Email</label>
-            <input type="email" id="email" placeholder="johnsamuel@hotmail.com">
+            <input type="email" id="email" name="email" placeholder="Enter your  email">
+
           </div>
           <div class="input-group">
             <label for="password">Password</label>
-            <input type="password" id="password" placeholder="****************">
+            <input type="password" id="password" name="password" placeholder="Enter the password">
           </div>
+          <% if(locals.message && message.length >0){ %>
+            <div  class="alert alert-danger text-center">
+              <%= message %>
+            </div>
+          <%}%>
           <button class="button">CONTINUE</button>
         </div>
 
@@ -87,7 +93,7 @@
 
         <!-- Social login buttons -->
         <div class="d-grid gap-3">
-          <button type="button" class="btn btn-outline-dark"><i class="fab fa-google"></i> Login with Google</button>
+          <a href="/auth/google" class="btn btn-outline-dark"><i class="fab fa-google"></i> Login with Google</a>
           <button type="button" class="btn btn-outline-primary"><i class="fab fa-facebook"></i> Login with
             Facebook</button>
           <button type="button" class="btn btn-outline-secondary"><i class="fab fa-apple"></i> Login with Apple</button>
