--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -31,8 +31,5 @@
             </div>
         </div>
     </div>
-    <footer class="dashboard-footer">
-        <p>&copy; 2024 Admin Dashboard</p>
-    </footer>
-</body>
-</html>
+   
+    <%- include('../partials/admin/footer.ejs') %>
