--- a/views/partials/admin/header.ejs
+++ b/views/partials/admin/header.ejs
@@ -11,10 +11,10 @@
         <nav class="dashboard-sidebar">
             <h2>Admin Dashboard</h2>
             <ul>
-                <li><a href="#dashboard">Dashboard</a></li>
-                <li><a href="#user-management">User Management</a></li>
+                <li><a href="/admin">Dashboard</a></li>
+                <li><a href="/admin/users">User Management</a></li>
                 <li><a href="#product-management">Product Management</a></li>
-                <li><a href="#category-management">Category Management</a></li>
+                <li><a href="/admin/category">Category Management</a></li>
                 <li><a href="#offer-management">Offer Management</a></li>
                 <li><a href="#coupon-management">Coupon Management</a></li>
                 <li><a href="#order-management">Order Management</a></li>
