--- a/views/admin/customers.ejs
+++ b/views/admin/customers.ejs
@@ -95,7 +95,7 @@
 
     <%- include('../partials/admin/footer.ejs') %>
 
-        <!-- <script>
+        <script>
             function blockUser(userId) {
                 // Implement block user functionality here
                 alert("User " + userId + " has been blocked.");
@@ -107,4 +107,4 @@
                 alert("User " + userId + " has been unblocked.");
                 // Optionally, make an AJAX call to unblock the user on the server
             }
-        </script> -->
+        </script>
