--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -1,5 +1,5 @@
 <%- include('../partials/admin/header.ejs') %>
-
+<div class="wrapper">
         <div class="dashboard-main-content">
             <header class="dashboard-header">
                 <h1>Welcome Admin</h1>
@@ -31,5 +31,6 @@
             </div>
         </div>
     </div>
+</div>
    
     <%- include('../partials/admin/footer.ejs') %>
