--- a/views/partials/admin/header.ejs
+++ b/views/partials/admin/header.ejs
@@ -3,19 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="admin-styles.css">
+    
     <!-- SweetAlert2 CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
 
 <!-- SweetAlert2 JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+<link rel="stylesheet" href="/admin/admin-styles.css">
+
     <title>Admin Dashboard</title>
 </head>
 <body>
     <div class="dashboard-container">
         <nav class="dashboard-sidebar">
-            <h2>Admin Dashboard</h2>
+            <h2 class="text-center">Admin</h2>
             <ul>
                 <li><a href="/admin">Dashboard</a></li>
                 <li><a href="/admin/users">User Management</a></li>
